[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tapas"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "Complexity72h" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "loguru",
    "pandas",
    "pip",
    "python-dotenv",
    "requests",
    "ruff",
    "tqdm",
    "typer",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["tapas"]
include = ["pyproject.toml", "tapas/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["tapas"]
force-sort-within-sections = true

